More css changes: --Fixed so that blue button is stationary to the right of site location/number --If not all the text fits on the blue button, there is a cutoff with ... --When hovering over a row, the row changes color (for UI).

--- a/src/main/webapp/css/aqcu.css
+++ b/src/main/webapp/css/aqcu.css
@@ -89,6 +89,10 @@
 	border-bottom: 1px solid #A0A0A0 ;
 }
 
+.time-series-selection-grid-row:hover{
+	background-color: #E4E4E4;
+}
+
 .time-series-identifier{
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -139,7 +143,9 @@
 	color: white;
 	padding: .5em;
 	border-radius: 5px;
-	width: auto;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .report-config .primary-ts-selector .close-btn {
